# usbd-midi

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
examples/example-esp32s3/: CHANGELOG.md  Cargo.toml  README.md
examples/example-esp32s3/.cargo/: config.toml
examples/example-esp32s3/src/: main.rs
src/: class.rs  code_index_number.rs  constants.rs  event_packet.rs  lib.rs  midi_device.rs  notes.rs  packet_reader.rs  usb_constants.rs
src/data/: from_traits.rs  mod.rs  u4.rs  u7.rs
src/data/byte/: from_traits.rs  mod.rs  u4.rs  u7.rs
src/data/midi/: channel.rs  code_index_number.rs  midi_channel.rs  midi_message.rs  midi_velocity.rs  mod.rs  notes.rs  velocity.rs
src/data/midi/message/: channel.rs  control_function.rs  message.rs  mod.rs  raw.rs  voice.rs
src/data/packet/: midi_packet_reader.rs  usb_midi_event_packet.rs
src/data/usb/: constants.rs  mod.rs
src/data/usb_midi/: cable_number.rs  code_index_number.rs  midi_packet_reader.rs  mod.rs  usb_midi_event_packet.rs
src/message/: channel.rs  control_function.rs  mod.rs  notes.rs  raw.rs
src/message/data/: mod.rs  u14.rs  u4.rs  u7.rs
src/packet/: cable_number.rs  code_index_number.rs  event_packet.rs  midi_packet_reader.rs  mod.rs  reader.rs  usb_midi_event_packet.rs
src/util/: mod.rs  nibble.rs  try_from.rs
