[package]
name = "example-esp32s3"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { version = "0.22", features = ["esp32s3"] }
esp-backtrace = { version = "0.14.2", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.12.0", features = ["esp32s3", "log"] }
usb-device = { version = "0.3.2", features = ["control-buffer-256"] }
usbd-midi = { path = "../../" }
midi-convert = "0.2.0"
heapless = "0.8.0"
